k8s_config/calico-config/network-policies/14-07-25/allow-intra-namespace.yaml
# ------------------------------
# ALLOW INTRA-NAMESPACE TRAFFIC
# ------------------------------
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-intra-namespace
  namespace: team-a
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector: {}
  egress:
    - to:
        - podSelector: {}
