k8s_config/calico-config/network-policies/14-07-25/default-deny-per-namespace.yaml
# ------------------------------
# DEFAULT DENY PER NAMESPACE (DEFENSE IN DEPTH)
# ------------------------------
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: team-a
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
